--- a/app/src/main/res/layout/email_item.xml
+++ b/app/src/main/res/layout/email_item.xml
@@ -8,42 +8,54 @@
 
     <TextView
         android:id="@+id/sender"
-        android:layout_width="85dp"
+        android:layout_width="75dp"
         android:layout_height="26dp"
-        android:text="TextView"
-        android:textSize="16sp"
         android:padding="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/senderpic"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.053" />
+        app:layout_constraintBottom_toTopOf="@id/title"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="TextView"
+        android:layout_marginEnd="260dp"
         android:padding="5dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sender" />
+        app:layout_constraintStart_toEndOf="@id/senderpic"
+        app:layout_constraintBottom_toTopOf="@id/message"
+        tools:layout_editor_absoluteY="26dp" />
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:padding="2dp"
-        android:lines="1"
+        android:layout_marginBottom="4dp"
         android:ellipsize="end"
+        android:lines="1"
+        android:padding="2dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toEndOf="@id/senderpic" />
+
+    <ImageView
+        android:id="@+id/senderpic"
+        android:layout_width="84dp"
+        android:layout_height="83dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/title"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
